Commented modifications in proto2.1

--- a/proto2.1.tex
+++ b/proto2.1.tex
@@ -242,7 +242,7 @@ as well.\endnote{%
   Page break following removed.
 }
 
-
+\begin{comment}
 \section{Modifications}
 The resulting language is not far from what we did in {\Large ?\LARGE ?}~\ref{proto1}\endnote{%
   Fix me!
@@ -279,6 +279,7 @@ run it \markWord{STBinding} monad to extract substitutions.\endnote{%
 \begin{singlespace}
   \inputminted[linenos]{haskell}{haskell-proto2-hearty-kayo.hs}
 \end{singlespace}
+\end{comment}
 
 
 
