fixed naked \refs and a few corrections

--- a/proto1.tex
+++ b/proto1.tex
@@ -621,7 +621,7 @@ We create the necessary instances\endnote{%
 
   \mehul{I agree, I think I just created one for the purpose of the diagram.}
 }
-as shown in \yyy{Figure}{Listing}~\ref{tab:flat-term-class-inst}.
+as shown in Listing~\ref{tab:flat-term-class-inst}.
 \begin{code-list}
   \begin{singlespace}
     \inputminted[linenos,gobble=4]{haskell}{haskell-proto1-class-flat.hs}
