--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -118,7 +118,7 @@ Taking into consideration above, there is quite some room for improvement and ad
 
 Moving onto what this thesis shall explore, first thing's first a complete, fully functional library which comes
 close to a \progLang{Prolog}-like\eref{language-like} language and has practical abilities to carry out real-world tasks.
-They include predicates such as\eref{such-as-like} \unknownLabel{cut}\endnote{%
+They include predicates such as\eref{such-as-like} \prologConstruct{cut}\endnote{%
   Write macros like \macroName{progLang} for the various classes
   of special symbols in your thesis, and then apply them to words like
   ``fail'', which when used as a \progLang{Prolog} word, should be
