--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -16,24 +16,24 @@
 
 Over the years another approach has branched off from embedding languages, to merge and/or integrate programming
 languages from different paradigms.
-Let us take an example of the \progLang{Scala} Programming Language \cite{website:scala}, a hybrid
-Object-Functional Programming Language which takes a leaf from each of the two books.\endnote{%
+Let us take an example of the \progLang{Scala} programming language \cite{website:scala}, a hybrid
+object-functional programming language which takes a leaf from each of the two books.\endnote{%
   Unless you are using leaf in the sense of page (as in \textit{overleaf}), ``a leaf from each of the [two] books''
   is a mixed metaphor.
 }
 In this thesis, the languages in question are \progLang{Haskell} and \progLang{Prolog}.
-This section takes a look at the literature on Multi Paradigm Languages, mainly Functional Logic Programming
-Languages that combine two of the most widespread Declarative Programming Styles.\endnote{%
+This section takes a look at the literature on multi paradigm languages, mainly functional logic programming
+languages that combine two of the most widespread declarative programming styles.\endnote{%
   There are some capitals to look at here.
 }\elabel{capitals}
 
 A peak into language classification reveals that it is not always a straight forward task to segregate languages
-according to their features and\xxx{/or} characteristics.
+according to their features and characteristics.
 It turns out that there are a number of notions which play a role in deciding where the language
 belongs. 
 Often a language ends up being a part of almost all paradigms due to extensive libraries.
-Simply speaking, a multi-paradigm programming language is a programming language that supports more than one
-programming paradigm \cite{Krishnamurthi:2008:TPL:1480828.1480846},\eref{comma-splice} more over, as Timothy Budd puts it
+Simply speaking, a multi paradigm programming language is a programming language that supports more than one
+programming paradigm \cite{Krishnamurthi:2008:TPL:1480828.1480846}.Moreover, as Timothy Budd puts it
 \cite{website:wikimultiparadigm} ``The idea of a multi paradigm language is to provide a framework in
 which programmers can work in a variety of styles, freely intermixing constructs from different
 paradigms.''
@@ -72,7 +72,7 @@ paradigms.''
 \subsection{Functional Logic Programming Languages}
 
   Continuing from the previous section, narrowing down the search by considering only multi paradigm declarative
-  languages namely, Functional Logical programming languages.
+  languages namely, functional logical programming languages.
   By doing so a large amount of information pops up, from articles that give brief description and mentions
   \cite{website:wikiflpl, website:wikiflpllist} to the implementing techniques \cite{website:imlpementingflpl}
   which give a brief overview of the aim and also the backdrop of publications.\endnote{%
@@ -130,7 +130,7 @@ Putting it all together, it gives us the feel of a logic language for something 
 \progLang{Haskell}.
 Unification is like two way pattern matching and with a similar analogy \progLang{Curry} is a \progLang{Haskell}
 that works both ways and hence variables can be on either sides.
-Although the language can do a lot but gaps do exist such as the improvement of narrowing techniques.\endnote{%
+Although the language can do a lot but gaps do exist, such as the improvement of narrowing techniques.\endnote{%
   ``Although'' fights with ``but''.  Remove one or the other; and put a comma before ``such as''.
 }
  
@@ -139,7 +139,7 @@ Although the language can do a lot but gaps do exist such as the improvement of 
 
 \section{Some Multi Paradigm Languages}
 
-The list of multi paradigm languages is huge, but in this thesis we will mostly stick to Functional Logical programming languages. Beginning with functional hybrids, a small project language called \progLang{Virgil} \cite{website:virgil}, combines\endnote{%
+The list of multi paradigm languages is huge, but in this thesis we will mostly stick to functional logical programming languages. Beginning with functional hybrids, a small project language called \progLang{Virgil} \cite{website:virgil}, combines\endnote{%
   Otherwise you have a sentence fragment.
 }
 objects to work with functions and procedures.
@@ -208,7 +208,7 @@ Taking a look at \progLang{Prolog} variants, \progLang{Ciao} \cite{website:ciao}
 \progLang{Prolog} for functional syntax support, \progLang{$\lambda $ Prolog} \cite{website:lambda-prolog} aims at
 modular higher order programming with abstract data types in a logical setting, \progLang{Babel}
 \cite{website:babel,moreno1992logic, moreno1988babel} combines pure \progLang{Prolog} with a first order functional
-notation, \progLang{LIFE} \cite{website:life} is for  Logic, Inheritance, Functions and Equations in
+notation, \progLang{LIFE} \cite{website:life} is for  logic, inheritance, functions and equations in
 \progLang{Prolog} syntax with currying and other features like functional languages and others
 \cite{bert1987lpg,malachi1984tablog}.\endnote{%
   This is a good sentence but could be worded more clearly.
