--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -26,7 +26,7 @@ Constraint programming \cite{website:constraintprogwiki} is closely related to t
 in the sense that the relations between variables is specified in the form of constraints.
 For example, consider a program to solve a simultaneous equation, now adding on to that restricting the range of
 the values that the variables can possible take, thus adding constraints to the possible solutions.
-Related to the same are Constraint Handling Rules \cite{website:chrwiki}, which are extensions to a language,
+Related to the same are constraint handling rules \cite{website:chrwiki}, which are extensions to a language,
 simply speaking adding constraints to a language like \progLang{Prolog}.
 
 Lastly some details on the working of functional logic programming languages, residuation and narrowing
