--- a/quasiquotation.tex
+++ b/quasiquotation.tex
@@ -6,47 +6,18 @@
 \fi
 \begin{document}
 
+
+
 % ---------------------------------------------------------------------------
 \chapter{Quasiquotation}\label{chap:quasiquotation}
+
+\section{What is this chapter about}
+
+-----------------------------------------------------------------------------
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+
 % ---------------------------------------------------------------------------
-
-\section{Theory}
-\begin{enumerate}
-
-\item Papers
-\begin{enumerate}
-\item
-\end{enumerate}
-
-\item Books
-\begin{enumerate}
-\item
-\end{enumerate}
-
-\item Articles / Blogs / Discussions
-\begin{enumerate}
-\item
-\end{enumerate}
-
-\item Websites
-\begin{enumerate}
-\item Quasiquotation Wikipedia, \cite{wikiquasi}
-\item Quasiquotation in Haskell, \cite{haskellquasi}
-\end{enumerate}
-
-\end{enumerate}
-
-
-\section{Implementations}
-\begin{enumerate}
-\item
-\end{enumerate}
-
-\section{Miscellaneous / Possibly Related Content}
-\begin{enumerate}
-\item
-\end{enumerate}
-
 \section{What is Quasiquotation ?}
 \begin{enumerate}
 \item \cite{website:quotationstanford}
