Change \S x.1 from "What is this chapter about" to "What this chapter is about".

--- a/background.tex
+++ b/background.tex
@@ -10,7 +10,7 @@
 \chapter{Background}\label{chap:background}
 %----------------------------------------------------------------------------
 
-\section{What is this chapter about}
+\section{What this chapter is about}
 
 -----------------------------------------------------------------------------
 
