--- a/embedding.tex
+++ b/embedding.tex
@@ -10,7 +10,7 @@
 \chapter{Embedding a Programming Language into another Programming Language }\label{chap:embedding}
 
 
-\section{What is this chapter about}
+\section{What this chapter is about}
 
 The art of embedding a programming language into another one has been explored a number of times in the form
 of building libraries or developing foreign function interfaces and so on. This area mainly aims at an environment
