--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -9,7 +9,7 @@
 \chapter{Meta Syntactic Variables}\label{chap:metasyntacticvariables}
 
 -----------------------------------------------------------------------------
-\section{What is this chapter about}
+\section{What this chapter is about}
 
 
 
