--- a/proto4.tex
+++ b/proto4.tex
@@ -9,7 +9,7 @@
 \chapter{Prototype 4}{\label{proto4}}
 
 
-\section{What is this chapter about}
+\section{What this chapter is about}
 
 -----------------------------------------------------------------------------
 
