--- a/pwp.tex
+++ b/pwp.tex
@@ -13,7 +13,7 @@
 %Prolog / Why Prolog ?
 
 
-\section{What is this chapter about}
+\section{What this chapter is about}
 
 -----------------------------------------------------------------------------
 
