--- a/quasiquotation.tex
+++ b/quasiquotation.tex
@@ -11,7 +11,7 @@
 % ---------------------------------------------------------------------------
 \chapter{Quasiquotation}\label{chap:quasiquotation}
 
-\section{What is this chapter about}
+\section{What this chapter is about}
 
 -----------------------------------------------------------------------------
 
