--- a/results.tex
+++ b/results.tex
@@ -8,7 +8,7 @@
 \chapter{Results}\label{sect:results}
 
 
-\section{What is this chapter about}
+\section{What this chapter is about}
 
 -----------------------------------------------------------------------------
 
