--- a/workCompleted.tex
+++ b/workCompleted.tex
@@ -12,7 +12,7 @@
 %----------------------------------------------------------------------------
 
 
-\section{What is this chapter about}
+\section{What this chapter is about}
 
 -----------------------------------------------------------------------------
 
