--- a/conclusion.tex
+++ b/conclusion.tex
@@ -11,7 +11,7 @@
 % ---------------------------------------------------------------------------
 
 
-\section{What is this chapter about}
+\section{What this chapter is about}
 
 -----------------------------------------------------------------------------
 
