--- a/futureScope.tex
+++ b/futureScope.tex
@@ -11,7 +11,7 @@
 \chapter{Future Scope}\label{chap:futureScope}
 
 
-\section{What is this chapter about}
+\section{What this chapter is about}
 
 -----------------------------------------------------------------------------
 
