--- a/introduction.tex
+++ b/introduction.tex
@@ -11,7 +11,7 @@
 %----------------------------------------------------------------------------
 
 
-\section{What is this chapter about}
+\section{What this chapter is about}
 
 This chapter introduces the scope of the thesis along with the preliminary arguments.
 
