--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -9,7 +9,7 @@
 \chapter{Multi Paradigm Languages (Functional Logic Languages)}\label{chap:multiparadigm}
 
 
-\section{What is this chapter about}
+\section{What this chapter is about}
 
 -----------------------------------------------------------------------------
 
