--- a/proto3.tex
+++ b/proto3.tex
@@ -6,7 +6,7 @@
 \chapter{Prototype 3}{\label{proto3}}
 
 
-\section{What is this chapter about}
+\section{What this chapter is about}
 
 -----------------------------------------------------------------------------
 
