replaced ----... with \rule{\textwidth} throughout

--- a/hwh.tex
+++ b/hwh.tex
@@ -12,7 +12,8 @@
 
 \section{What this chapter is about}
 
------------------------------------------------------------------------------
+\noindent\rule{\textwidth}{0.5pt}
+%-----------------------------------------------------------------------------
 
 
 In this chapter we discuss the properties of \progLang{Haskell}
