--- a/introduction.tex
+++ b/introduction.tex
@@ -16,7 +16,8 @@
 This chapter introduces the scope of the thesis along with the preliminary arguments.
 
 
------------------------------------------------------------------------------
+\noindent\rule{\textwidth}{0.5pt}
+%-----------------------------------------------------------------------------
 
 
 \section{Beginnings}
