--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -8,9 +8,10 @@
 
 \chapter{Meta Syntactic Variables}\label{chap:metasyntacticvariables}
 
------------------------------------------------------------------------------
 \section{What this chapter is about}
 
+\noindent\rule{\textwidth}{0.5pt}
+%-----------------------------------------------------------------------------
 
 
 Some sources for the topic 
