--- a/proto3.tex
+++ b/proto3.tex
@@ -8,7 +8,8 @@
 
 \section{What this chapter is about}
 
------------------------------------------------------------------------------
+\noindent\rule{\textwidth}{0.5pt}
+%-----------------------------------------------------------------------------
 
 When two terms are to be unified we can use \yyy{}{\Huge Chapter}~\ref{proto1} ,
 
