--- a/pwp.tex
+++ b/pwp.tex
@@ -15,7 +15,8 @@
 
 \section{What this chapter is about}
 
------------------------------------------------------------------------------
+\noindent\rule{\textwidth}{0.5pt}
+%-----------------------------------------------------------------------------
 
 This chapter discusses the properties of the target language \progLang{Prolog} and the feature set that will be translated to the host 
 language to extend its capabilities.
