--- a/quasiquotation.tex
+++ b/quasiquotation.tex
@@ -13,11 +13,9 @@
 
 \section{What this chapter is about}
 
------------------------------------------------------------------------------
+\noindent\rule{\textwidth}{0.5pt}
+%-----------------------------------------------------------------------------
 
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-
-% ---------------------------------------------------------------------------
 \section{What is Quasiquotation ?}
 \begin{enumerate}
 \item \cite{website:quotationstanford}
