--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -12,7 +12,8 @@
 
 \section{What this chapter is about}
 
------------------------------------------------------------------------------
+\noindent\rule{\textwidth}{0.5pt}
+%-----------------------------------------------------------------------------
 
 
 There are some technicalities which are indirectly related to the problem but do not bare a point of contact.
