--- a/background.tex
+++ b/background.tex
@@ -12,7 +12,8 @@
 
 \section{What this chapter is about}
 
------------------------------------------------------------------------------
+\noindent\rule{\textwidth}{0.5pt}
+%-----------------------------------------------------------------------------
 
 Programming languages fall into different categories also known as ``paradigms''.
 They exhibit different characteristics according to the paradigm they fall into.
