--- a/futureScope.tex
+++ b/futureScope.tex
@@ -13,7 +13,8 @@
 
 \section{What this chapter is about}
 
------------------------------------------------------------------------------
+\noindent\rule{\textwidth}{0.5pt}
+%-----------------------------------------------------------------------------
 
 
 \begin{enumerate}
