--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -11,7 +11,8 @@
 
 \section{What this chapter is about}
 
------------------------------------------------------------------------------
+\noindent\rule{\textwidth}{0.5pt}
+%-----------------------------------------------------------------------------
 
 
 Over the years another approach has branched off from embedding languages, to merge and/or integrate programming
