--- a/proto4.tex
+++ b/proto4.tex
@@ -11,7 +11,8 @@
 
 \section{What this chapter is about}
 
------------------------------------------------------------------------------
+\noindent\rule{\textwidth}{0.5pt}
+%-----------------------------------------------------------------------------
 
 Our aim to embedd IO into the DSL
 
