--- a/workCompleted.tex
+++ b/workCompleted.tex
@@ -14,7 +14,8 @@
 
 \section{What this chapter is about}
 
------------------------------------------------------------------------------
+\noindent\rule{\textwidth}{0.5pt}
+%-----------------------------------------------------------------------------
 
 
 \section{What we are doing}
