small endnote change in proto2.1.tex .

--- a/proto2.1.tex
+++ b/proto2.1.tex
@@ -119,10 +119,12 @@ Putting everything together forms the \progLang{Prolog} query resolver. Given a 
 input query with the rules in the knowledge base to create a list of goals to satisfy to generate an unifier along with saving choice
 points on the way for backtracking.
 
-This chapter discusses about how the abstract syntax and query resolver from \cite{prolog-lib} can be adapted to the concepts and
-implementation from Chapter~\ref{proto1}. This not only proves how generic and modular the approach from the previous chapter is but also
-the system working as a whole.\endnote{%
-  Page break following removed.
+This chapter discusses about how the abstract syntax and query resolver from \cite{prolog-lib} can be adapted to
+the concepts and implementation from Chapter~\ref{proto1}.
+This not only proves how generic and modular the approach from the previous chapter is but also the system working
+as a whole.\endnote{%
+  Page break following removed.\newline
+  \david{Mehul: remove this endnote if you have no questions about removing the pagebreak.}
 }
 
 
@@ -177,7 +179,8 @@ The steps involved for the transformation are listed below.
 The above approach allows to us to jump between the environments(grammars) easily provided the back and forth conversion capabilities.
 
 The resulting abstract grammar is shown in the Figure~\ref{tab:flatgrp0201}.\endnote{%
-  Page break following removed.
+  Page break following removed.\newline
+  \david{Mehul: Remove this endnote when you are ok with how the pages are how the pages break.}
 }
 
 
