added a tie (~) after a Figure in workCompleted.tex .

--- a/workCompleted.tex
+++ b/workCompleted.tex
@@ -25,7 +25,7 @@ objectives is to implement monadic unification using the library \cite{unificati
 
 \section{Unifiable Data Structures}
 For a data type to be Unifiable, it must have instances of Functor, Foldable and Traversable.
-The interaction between different classes is depicted in Figure \ref{fig:Functor Hierarchy Redux}.
+The interaction between different classes is depicted in Figure~\ref{fig:Functor Hierarchy Redux}.
 
 \begin{figure}[th]
 \centering
