partial LaTeX fixes for errors when compiling the thesis.

--- a/background.tex
+++ b/background.tex
@@ -183,7 +183,7 @@ They can be termed as multilingual run-times\endnote{%
   is correct.
   What do basic O/S texts use?
   ``Multilingual'' is definitely one word.
-  https://en.wikipedia.org/wiki/Run_time_(program_lifecycle_phase)
+  \Verb!https://en.wikipedia.org/wiki/Run_time_(program_lifecycle_phase)!
 }
 which lay down a common layer for languages to use each others
 functions.
