--- a/proto1.tex
+++ b/proto1.tex
@@ -557,6 +557,8 @@ That is use code something like that in Figure~\ref{tab:garfunkle}, and show how
 \section{Making the language compatible with \protect\codeLibrary{unification-fd}}\label{sec:making-lang-comp}
 
 \david{Check the Section~\ref{sec:making-lang-comp} title change above.}
+\david{\macroName{codeLibrary} is local to this file, which creates a
+  problem in the Table of Contents.}
 
 Our language is now opened up and \endnote{%
   The ``is'' seems mispaced.
